--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="This website displays Hector Castillo's Resume">
+  <meta name="author" content="862340302">
 
-  <title>John Doe - Business Administration</title>
+  <title>Hector Castillo - Accounting</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/hectorcastillo.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Hector Castillo
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Sociology📚</div>
+        <p class="lead mb-4">Hello, my name is Hector Castillo and I am currently an undergraduate at UC Riverside, obtaining my Bachelor’s in Sociology. I currently have an Associates of Arts degree (A.A.) in Psychology from Mount San Antonio Community College but then shifted to Sociology as an undergraduate. I was drawn to psychology and sociology because I grew up in a low-socioeconomic neighborhood, impacted by drugs and gang activity, witnessing how the environment affected families. I am also a first-generation college student and it was very difficult to figure things out and especially find the right career path. Despite hardships, I was able to overcome them, branching out and becoming involved in extracurricular activities and even doing a part time job. These clubs helped me build numerous skills, the main one being social skills, interacting and working with a diverse student population. This will allow me to become more of an involved student and expand my network. I will have the opportunity to apply for internships and attend career workshops to help me become a competitive candidate.
+<br><br>
 
-        Enter bio here<br><br>
+        My main goal is to work with others who need assistance, preferably in social work or in accounting. I do believe I have the right skills and strengths to be able to work in these types of job fields, from prior work experience and being involved on-campus programs throughout my college years, helping me become a well rounded person, a quick learner, a professional communicator, and listener. I am currently working as a waiter and enrolled in UCR. I hope to graduate this upcoming year and hope to transfer back to Mount San Antonio College and obtain my accounting certificate.With these years of education, my big goal is to work my way as a CPA; however, I know it will take far more experience and possibly a higher education to achieve this which is why it is my biggest goal to accomplish.Some possible jobs that I am considering applying for are  banking and bookkeeping, and possibly healthcare insurance.<br><br>
 
-        Enter bio here
+        My mom sacrificed so much in-order to give my sister and I an opportunity to obtain the “American Dream”. Throughout my life I witnessed my mom working multiple jobs, living paycheck to paycheck in-order to afford the bare necessities like a bedroom, food, and clothing. Seeing my mom struggling made me want to pursue a high paying job so that my family doesn’t have to struggle anymore as well as showing future generations that they can succeed in an institution of higher education. Understanding how another person is feeling and understanding them beyond their struggles can help me assist people with various delicate situations and challenges. The system we live in was not structured to benefit people like myself but I strongly believe that the more we become educated and uplift our communities we can challenge those inequities. Although everyday is a struggle I am happy that I decided to pursue higher education. Lastly, I want to thank everyone who has read my entire bio. I wish you all the best!
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://joinhandshake.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/HectorCcoding">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://instagram.com">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:hcast046@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +93,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">EOPS Program</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.mtsac.edu/">Mount San Antonio Community College</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Leadership skills<br> 
+              • Speaker in the program<br>
+              • Helped new students in the program<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2020 - March 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Waiter</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://redrobin.com">Red Robin</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responible taking customers orders<br>
+              • Brought drinks and food to the right table<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2023 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Promise Plus Program</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://chass.ucr.edu/">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped and promote the program<br>
+            • Gave out free merchandise<br>
+            • Created educational content<br>
+            • Helped trained newer volunteers<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2020 - March 2022</span>
           </div>
         </div>
 
@@ -152,33 +153,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Mount San Antonio Community College</div>
+            <div>Accounting Certificate</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2024 - December 2024</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Sociology</div>
+            <div>Bachelors Degree</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2024</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0">Mount San Antonio Community College</h3>
+            <div class="subheading mb-3">Psychology</div>
+            <div>Associates Degree</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">October 2020 - May 2023</span>
           </div>
         </div>
 
@@ -190,9 +191,12 @@
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+<center>
+    <img src="img/eopsprogram.png" width="500px">
+    <img src="img/mtsacpromise.jpg" width="500px"><br>
+    <img src="img/ucrlogo.jpg" width="500px">
+    <img src="img/ucrchass.jpg" width="500px"><br>
+</center>
       </div>
     </section>
 
